# secretset

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/secretset/: __init__.py  anon.py  collect.py  io.py  main.py  map.py
tests/: _utils.py  conftest.py  df1.csv  df2.csv  test_anonymize.py  test_collect.py  test_map.py
