[tool.poetry]
name = "secretset"
version = "0.1.1"
description = "Command line interface to anonymize data."
authors = ["Chris Pryer <cnpryer@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "secretset", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
click = "^8.1.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
secretset = 'secretset.main:main'
