[project]
name = "secretset"
version = "0.2.0a4"
description = "Anonymize excel and csv files"
authors = [
    { name = "Chris Pryer", email = "cnpryer@gmail.com" }
]
dependencies = ["click~=8.1.3", "polars~=0.17.11"]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[project.scripts]
sset = "secretset.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.0.264", "black~=23.3.0", "mypy~=1.2.0", "pytest~=7.3.1"]

[tool.rye.scripts]
sset = 'secretset.main:main'

[tool.black]
line-length = 79
